---------------------------------------------------------------------------------------------------
Version: 18.0.2
Date: 2020-02-15
  Features:
    - Update for Factorio 0.18
    - radius now supports an array to provide min and max radius for centre of drop pod to be from target to avoid hitting the target directly. Old single number can still be supplied and will apply a minimum radius of 0.
    - supports an "auto" modular ship type thats used with a mod setting to calculate how many ship parts a modual ship of a given weight should have. Useful for API streaming integrations.
  Changes:
    - slightly reduce damage of tiny crashing ship. so it doesn't kill things around it by 1 tile any more.
    - JSON command arguments support spaces and more natural for use.
  Bugfixes:
    - Added missing localisations for water explosions
    - Corrected total fire burn times from being unintentionally doubled
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.1
Date: 2019-07-14
  Features:
    - added water impact graphics and effects
  Changes:
    - tweak smoke and fire effects, positions and quantity slightly
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.0
Date: 2019-07-10
  Features:
    - Initial Release
  Changes:
  Bugfixes:
  Info: